; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_filter.c_bpf_push_mac_rcsum.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_filter.c_bpf_push_mac_rcsum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sk_buff*)* @bpf_push_mac_rcsum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bpf_push_mac_rcsum(%struct.sk_buff* %0) #0 {
  %2 = alloca %struct.sk_buff*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %2, align 8
  %3 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %4 = call i64 @skb_at_tc_ingress(%struct.sk_buff* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %14

6:                                                ; preds = %1
  %7 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %8 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %9 = call i32 @skb_mac_header(%struct.sk_buff* %8)
  %10 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %11 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @skb_postpush_rcsum(%struct.sk_buff* %7, i32 %9, i32 %12)
  br label %14

14:                                               ; preds = %6, %1
  ret void
}

declare dso_local i64 @skb_at_tc_ingress(%struct.sk_buff*) #1

declare dso_local i32 @skb_postpush_rcsum(%struct.sk_buff*, i32, i32) #1

declare dso_local i32 @skb_mac_header(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
